# radar

./: .eslintrc.json  .gitignore  README.md  commitlint.config.js  eslint.config.js  index.html  package-lock.json  package.json  tsconfig.json  vite.config.ts
.husky/: commit-msg  pre-commit  pre-push
.husky/_/: husky.sh
scripts/: check-console-logs.js
src-react/: App.tsx  main.tsx  radar-display.css
src-react/components/common/: Button.tsx  Card.tsx  CopyButton.tsx  Icon.tsx  InfoRow.tsx  Section.tsx  ThemeToggle.tsx
src-react/components/layout/: Footer.tsx  Header.tsx  MainContent.tsx
src-react/components/network/: NetworkController.tsx  ScanButton.tsx
src-react/components/network/LocalNetworkCard/: LocalNetworkCard.tsx
src-react/components/network/LocalNetworkCard/sections/: ServiceConnectionInfo.tsx  ServiceDetailsRenderer.tsx  ServiceDiscoveryInfo.tsx
src-react/components/network/NetworkHostGroup/: NetworkHostGroup.tsx
src-react/components/network/PublicNetworkCard/: PublicNetworkCard.tsx
src-react/components/network/PublicNetworkCard/sections/: DNSSection.tsx  LocationSection.tsx  PublicIPSection.tsx  SecuritySection.tsx
src-react/components/network/RadarAnimation/: AnimationCanvas.tsx  RadarAnimation.tsx
src-react/components/network/ScanButton/: ScanButton.tsx
src-react/components/network/ServiceGrouping/: ServiceGroup.tsx  ServiceGrouping.tsx
src-react/context/: AppContext.tsx  FullscreenContext.tsx  ThemeContext.tsx
src-react/hooks/: useAnimationFrame.ts  useBackendNetwork.ts  useDots.ts  useHostnameMapping.ts  useRadarRenderer.ts
src-react/services/: backendService.ts  debugLogger.ts  notificationService.ts
src-react/styles/: index.css
src-react/types/: network.ts
src-react/utils/: icons.ts  logger.ts
src-tauri/: Cargo.toml  README.md  src.commands.rs  tauri.conf.json
src-tauri/backup/: default.json  tauri.conf.json
src-tauri/icons/: icon.icns
src-tauri/src/: commands.rs  lib.rs  log.rs  main.rs  network_scanner.rs  public_network.rs  router_discovery.rs
