[package]
name = "radar"
version = "0.1.0"
description = "A menu-bar app that scans the local network for services"
authors = ["you"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
# The `_lib` suffix may seem redundant but it is necessary
# to make the lib name unique and wouldn't conflict with the bin name.
# This seems to be only an issue on Windows, see https://github.com/rust-lang/cargo/issues/8519
name = "radar_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = ["macos-private-api", "tray-icon"] }
tauri-plugin-opener = { version = "2", optional = true }
tauri-plugin-notification = { version = "2", optional = true }
tauri-plugin-network = { version = "2", optional = true }
tauri-plugin-log = { version = "2", features = ["colored"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
mdns-sd = "0.7.3"
ssdp-client = "2.0.0"
tokio = { version = "1", features = ["full"] }
futures = "0.3.28"
once_cell = "1.18.0"
reqwest = { version = "0.11", features = ["json"] }
quick-xml = { version = "0.31", features = ["serialize"] }
thiserror = "1.0"
# New dependencies for router/gateway discovery
default-net = "0.15.0"
rupnp = "1.1.0"
get_if_addrs = "0.5.3"
# For SNMP queries (optional)
snmp = "0.2.2"
# For DNS lookups
dns-lookup = "2.0.2"
# For hostname resolution on Unix systems
libc = "0.2"
# For random number generation (used in STUN)
rand = "0.8.5"
# For logging
env_logger = "0.10.0"
log = "0.4"
chrono = "0.4"
# For ASN lookups
trust-dns-resolver = "0.22.0"
image = "0.24"
url = "2.3"

[features]
# Default features
default = ["all_plugins"]
all_plugins = ["tauri-plugin-notification", "tauri-plugin-opener", "tauri-plugin-network"]

# Logging features
# Removed duplicate command_logging and all_logging entries

# Module-specific logging features
log_commands = []
log_network_scanner = []
log_public_network = []

# Add module-specific logging features
log_enable_mod_mdns_sd = []
log_enable_mod_upnp = []
log_enable_mod_service_daemon = []

# Combine features
command_logging = ["log_commands"]
network_logging = ["log_network_scanner", "log_public_network"]
all_logging = ["log_commands", "log_network_scanner", "log_public_network"]
full_debug = ["all_logging", "log_enable_mod_mdns_sd", "log_enable_mod_upnp", "log_enable_mod_service_daemon"]

